gts-macros/tests/compile_fail/const_values_type_mismatch_float_to_int.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/const_values_type_mismatch_float_to_int.rs:21:1
   |
21 | / #[struct_to_gts_schema(
22 | |     dir_path = "schemas",
23 | |     base = MismatchFIntBaseV1,
24 | |     schema_id = "gts.x.test.mismatch.fint.v1~x.test.mismatch.float_to_int.v1~",
...  |
27 | |     const_values = "count=3.14"
28 | | )]
   | |  ^
   | |  |
   | |__expected `i32`, found floating-point number
   |    expected due to the type of this binding
   |
   = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
